
2009-11-5 tdb
 * Repository objects persist across requests

2009-11-9 tdb
 * Subject children cache is now initialised for all subjects, fixing #3451

2009-11-11 cjg
 * Added methods to Script for working with action lists.
 * Create action list for actions to go on summary page
 * Added this list to the summary page

2009-11-11 cjg
 * Fixed bug that is_advertised property on export plugins is being ignored.

2009-11-11 cjg
 * Trivial change to eprint fields; changed creators_id from 'email' to 'text'

2009-11-11 cjg
 * Added 'fn' parameter to cgi/json as an alternative to 'callback' 

2009-11-12 cjg
 * Syntactic tweak to process_parameters

2009-11-12 tdb
 * Added subclasses for EPrints::XML to support class-overrides
 * Added "ref" option to phrases, which will caused the referenced phrase to be used instead

2009-11-12 cjg
 * Fix to make button forms work with https.

2009-11-12 cjg
 * Better error message if repository is not loaded in /bin/ scripts.

2009-11-12 cjg
 * Built a method in Rewrite which takes a list of plugins and a HTTP
    accept header and returns the best plugin for that header!
 * Export plugins have a quality value, defaulting to qs=0.5
 * URIs now perform a content negotiation redirect! 

2009-11-13 cjg
 * Improved document_upload.pl layout to make it easier to add/remove 
    suffix to mimetype mappings.

2009-11-13 cjg
 * Added support for Linked data. Yes, you heard me: Linked Data!

2009-11-13 cjg
 * Corrected deprecated call in EPrints::Apache::ReWrite (introduced last commit)

2009-11-13 cjg
 * Added URI to EPrint Summary Page

2009-11-15 cjg
 * If no "accept" header then assume text/html
 * Renamed _update_triggers to update_triggers (prelude from moving it to DataObj.pm)
 * Added RDF-N3 Export tool.
 * Tweaks to bibo module to handle events better

2009-11-16 cjg
 * Removed unused dependency on Unicode::String from RDFN3

2009-11-16 cjg
 * Added code to RDF .pl files to check fields exist.