@@ -22,5 +22,5 @@ $c->{rdf}->{event_uri} = sub {
 
 	my $raw_id = "eprintsrdf/$ev_title/$ev_location/$ev_dates";
 
-	return "epx:event/".md5_hex( $raw_id );
+	return "epx:event/".md5_hex( utf8::encode( $raw_id ) );
 };
